data cleaning + feature generation

--- a/data/en/hate-speech-and-offensive-language/format_data.ipynb
+++ b/data/en/hate-speech-and-offensive-language/format_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -42,6 +42,7 @@
     "# 0 - neither\n",
     "# 1 - hate speech\n",
     "# 2 - offensive\n",
+    "df = df.reindex(['text_id','text','hate'],axis=1)\n",
     "df['hate'] = df['hate'].astype(int)\n",
     "total = df.shape[0]\n",
     "hate = df.groupby(['hate'])['text_id'].count()[1]\n",
