--- a/data/en/semeval2019/format_data.ipynb
+++ b/data/en/semeval2019/format_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -19,6 +19,7 @@
    ],
    "source": [
     "import pandas as pd\n",
+    "!rm data.tsv\n",
     "!cat taskA/train_en.tsv >> data.tsv\n",
     "!cat taskA/dev_en.tsv >> data.tsv\n",
     "!cat taskA/test_en.tsv >> data.tsv\n",
@@ -33,7 +34,8 @@
     "df.sort_values(\"text\", inplace = True) \n",
     "df.drop_duplicates(inplace = True) \n",
     "df.rename(columns={'id':'text_id','HS':'hate'},inplace=True)\n",
-    "df['id'] = df.apply(lambda x: 'semeval2019_'+str(x.text_id),axis=1)\n",
+    "df.drop(['TR','AG'],axis=1,inplace=True)\n",
+    "df['text_id'] = df.apply(lambda x: 'semeval2019_'+str(x.text_id),axis=1)\n",
     "total = df.shape[0]\n",
     "hate = df.groupby(['hate'])['text_id'].count()[1]\n",
     "print(\"Size of dataset:\", total)\n",
