--- a/src/base_line_model.ipynb
+++ b/src/base_line_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,12 +11,17 @@
     "!cat ../data/en/hate_speech_icwsm18/nhsm.csv >> ../data/dataset.csv\n",
     "!cat ../data/en/hate-speech-and-offensive-language/t_davidson.csv >> ../data/dataset.csv\n",
     "!cat ../data/en/ousidhoum-etal-multilingual-hate-speech-2019/ousidhoum.csv >> ../data/dataset.csv\n",
-    "!cat ../data/en/semeval2019/semeval2019.csv >> ../data/dataset.csv"
+    "!cat ../data/en/semeval2019/semeval2019.csv >> ../data/dataset.csv\n",
+    "\n",
+    "!rm ../data/dataset-hi.csv\n",
+    "!rm ../data/dataset-hi-cdmx.csv\n",
+    "!cat ../data/hi/hasoc2019/hi-hasoc2019.csv >> ../data/dataset-hi.csv\n",
+    "!cat ../data/hi/Hinglish-Offensive-Text-Classification/hi-code-mixed-pmathur.csv >> ../data/dataset-hi-cdmx.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,9 +32,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Emoji File not found..\n",
+      "Downloading\n",
+      "done!\n",
+      "Reading Slangs ...\n",
+      "Reading twitter - 1grams ...\n",
+      "Reading twitter - 2grams ...\n",
+      "Reading twitter - 1grams ...\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import re\n",
@@ -38,8 +57,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## English Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,11 +73,11 @@
      "output_type": "stream",
      "text": [
       "(50386, 3)\n",
-      "             text_id          text  class\n",
-      "count          50381         50381  50381\n",
-      "unique         49524         50000      3\n",
-      "top     hasoc_en_576  @user retard      2\n",
-      "freq               2             5  22898\n"
+      "             text_id                                               text  class\n",
+      "count          50381                                              50381  50381\n",
+      "unique         49524                                              50000      3\n",
+      "top     hasoc_en_867  By wearing the #BalidaanBadge over his gloves ...      2\n",
+      "freq               2                                                  5  22898\n"
      ]
     }
    ],
@@ -66,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +118,7 @@
        "<AxesSubplot:xlabel='class'>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -135,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,18 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "pre = fg.features()\n",
     "df_en['ekphrasis_clean_text'] = df_en.apply(lambda x: \" \".join(text_processor.pre_process_doc(x.text)),axis=1)\n",
-    "df_en['basic_clean_text'] = df_en.apply(lambda x: pre.preprocess(x.text), axis = 1)"
+    "df_en['basic_clean_text'] = df_en.apply(lambda x: pre.preprocess(x.text), axis = 1)\n",
+    "df_en.to_csv('../data/dataset_en.csv',index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -225,13 +252,296 @@
      "output_type": "stream",
      "text": [
       "Why the #DoctorsFightBack is not just about violence unleashed on them ? Its time to address faltering justice systems, crippled health systems and broken dreams  https://t.co/S2akvvDDlY\n",
-      "Why the Doctors Fight Back is not just about violence unleashed on them ? Its time to address faltering justice systems , crippled health systems and broken dreams https :// t . co / S2akvvDDlY\n"
+      "why the doctors fight back not just about violence unleashed them ? its time address faltering justice systems , crippled health systems and broken dreams\n"
      ]
     }
    ],
    "source": [
     "print(df_en['text'][100])\n",
     "print(df_en['basic_clean_text'][100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hindi and Code mixed Hindi Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(9330, 3)\n",
+      "            class\n",
+      "count  9330.00000\n",
+      "mean      0.52926\n",
+      "std       0.49917\n",
+      "min       0.00000\n",
+      "25%       0.00000\n",
+      "50%       1.00000\n",
+      "75%       1.00000\n",
+      "max       1.00000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/homes/nv304/py3tf2/lib/python3.6/site-packages/pandas/core/computation/expressions.py:68: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  return op(a, b)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_hi = pd.read_csv('../data/dataset-hi.csv')\n",
+    "print(df_hi.shape)\n",
+    "df_hi.drop(df_hi[(df_hi['text_id'] == 'text_id')].index,inplace=True)\n",
+    "df_hi.drop(df_hi[(df_hi['hate'] == 'HS')].index,inplace=True)\n",
+    "df_hi.rename(columns={'hate':'class'},inplace=True)\n",
+    "print(df_hi.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of dataset: 9330\n",
+      "Hateful (class) = 1: 4938 ( 52.926045016077175 %)\n",
+      "\n",
+      "****\n",
+      "\n",
+      "**Hateful examples (class) = 1\n",
+      "['ये लिटन की गाँड में लिप्टन की चाय डालता हूँ अभी विथ गर्म केतली ', 'लम्पट  झोलाछाप , तेरे जैसा 20-25 दिन राम लीला मैदान में गुजरकर  और मीडिया का लुंड  चाटकर  उनलोग नेता नहीं बने ! सारी  जिंदगी खपाई ! तू मादरचोद देहाती गवर जाहिल हरामी , उनपढ ,ठरकी माथरजात बैठ चुपचाप ', 'भोसडीके अच्छे से बोल रहा हूँ तो तुम्हारा मूड खराब हो रहा है ', '#मणिशंकर अय्यर साहब आपने क्या गलत कहा था एक #नीच को नीच ही तो कहा था जो बिलकुल सही था में सेल्यूट करता हु आपको', 'भैनचोद आत्महत्या की तैयारी कर रहा है ।', 'भेनचोद ये गुलाबी पैंट कौन पहनता है बे ', 'बन्द करो ये बेशर्मो वाला तमाशा कोई कहता है भगवा की वजह से हारी टीम इंडिया तो कोई कहता है पाकिस्तान की वजह से हरी।    ये जो बातें कर रहे है ये किसी अनपढ़ गवार से कम नही है इन्हें सिर्फ़ अपनी-अपनी बातें रखनी है विरोध के लिए।    हमारे देश की टीम अपने घटिया खेल से हरी है और कुछ नही।', 'कलुए सुधर जा ! मुझे कभी शक होता है तू कही कटे लुंड की पैदाइश तो नही है ! ', '@TheKhanSaab Happy Birthday Bhai, Stay Blessed.... *भोसडीके* ', 'घिनौने से\\u200c घिनौना काम यह जंगली सूअर ही कर सकते हैं चाहे वह नकली दूध का बेचना हो यह छोटी बच्ची का योन शोषण करना हो या किसी का कत्लेआम करना हो']\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = df_hi.shape[0]\n",
+    "gp = df_hi.groupby(['class'])['text_id'].count()\n",
+    "hate = gp[1]\n",
+    "print(\"Size of dataset:\", total)\n",
+    "print(\"Hateful (class) = 1:\", hate, \"(\",hate/total*100,\"%)\")\n",
+    "print(\"\\n****\\n\")\n",
+    "print('**Hateful examples (class) = 1')\n",
+    "print(list(df_hi[df_hi['class']==1]['text'][0:10]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def emoji_clean(x):\n",
+    "    from emoji import emoji\n",
+    "    import re\n",
+    "    g = re.search(r'\\\\x[a-z0-9]([^<]*)', x, re.IGNORECASE)\n",
+    "    if g:\n",
+    "        g = g.group()\n",
+    "#         print(g)\n",
+    "        el = list(emoji.keys())\n",
+    "\n",
+    "        for i in el:\n",
+    "            if i in g:\n",
+    "                x = x.replace(g,' '+emoji[i]).replace('<','').replace('>','')\n",
+    "    return x\n",
+    "\n",
+    "df_hi['text'] = df_hi.apply(lambda x: emoji_clean(x.text), axis=1) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hi['ekphrasis_clean_text'] = df_hi.apply(lambda x: \" \".join(text_processor.pre_process_doc(x.text)),axis=1)\n",
+    "df_hi['basic_clean_text'] = df_hi.apply(lambda x: pre.preprocess(x.text), axis = 1)\n",
+    "df_hi.to_csv('../data/dataset_hi.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ऑफिसियल मीटिंग्स में अब नो बिस्किट  केवल हेल्थी स्नैक्स:लाई चना,भुना चना,खजूर,काजू,बादाम,अखरोट ही दिया जायेगा  #डॉहर्षवर्द्धन MOH    आपने चाय के लिए कुछ नही बताया   पीनी है, कि नही पीनी है \n",
+      "ऑफ ि स ि यल म ी ट ि ं ग ् स म े ं अब न ो ब ि स ् क ि ट क े वल ह े ल ् थ ी स ् न ै क ् स : ल ा ई चन ा , भ ु न ा चन ा , खज ू र , क ा ज ू , ब ा द ा म , अखर ो ट ह ी द ि य ा ज ा य े ग ा <hashtag> ड </hashtag> ॉ हर ् षवर ् द ् धन <allcaps> Medal Of Honor </allcaps> आपन े च ा य क े ल ि ए क ु छ नह ी बत ा य ा प ी न ी ह ै , क ि नह ी प ी न ी ह ै\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_hi['text'][100])\n",
+    "print(df_hi['ekphrasis_clean_text'][100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ऑफिसियल मीटिंग्स में अब नो बिस्किट  केवल हेल्थी स्नैक्स:लाई चना,भुना चना,खजूर,काजू,बादाम,अखरोट ही दिया जायेगा  #डॉहर्षवर्द्धन MOH    आपने चाय के लिए कुछ नही बताया   पीनी है, कि नही पीनी है \n",
+      ": , , , , , अखर षवर Medal Of Honor आपन ,\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_hi['text'][100])\n",
+    "print(df_hi['basic_clean_text'][100])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3189, 3)\n",
+      "             class\n",
+      "count  3189.000000\n",
+      "mean      1.201944\n",
+      "std       0.929772\n",
+      "min       0.000000\n",
+      "25%       0.000000\n",
+      "50%       2.000000\n",
+      "75%       2.000000\n",
+      "max       2.000000\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/homes/nv304/py3tf2/lib/python3.6/site-packages/pandas/core/computation/expressions.py:68: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  return op(a, b)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_hi = pd.read_csv('../data/dataset-hi-cdmx.csv')\n",
+    "print(df_hi.shape)\n",
+    "df_hi.drop(df_hi[(df_hi['text_id'] == 'text_id')].index,inplace=True)\n",
+    "df_hi.drop(df_hi[(df_hi['hate'] == 'HS')].index,inplace=True)\n",
+    "df_hi.rename(columns={'hate':'class'},inplace=True)\n",
+    "print(df_hi.describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of dataset: 3189\n",
+      "Hateful (class) = 1: 303 ( 9.501411100658514 %)\n",
+      "\n",
+      "****\n",
+      "\n",
+      "**Hateful examples (class) = 1\n",
+      "['@InviSibleSold @mabkhan86 @dridadahn Main jutt Punjabi hoon aur paka N league. Madarchod Imran ki Punjab say nafrat clear hai.', 'RT @AnshKSpeaks: Screw the law of the land. If I find this chutiya Madarchod Mulla I will Lynch him, murder him, cut into millions of pieces and Ha\\\\xe2\\\\x80\\\\xa6', \"*Virat and Anushka's future kid*\\\\n\\\\nAnushka: Mamma bolo beta, mammaaaa\\\\n\\\\nKid: Mm.. Ma.. Maa.. Madarchod!\", '@dasraghubar @narendramodi @AmitShah @BJP4India @BJPLive @BJP4Jharkhand Madarchod brahmno se mafi mango', '@NANGI_POOJA Madarchod musalman aaiysha aur wo hai', '@M_walim @ICC @imVkohli @AnushkaSharma Teri ammi ko chodne wala insaan hai ye icc kya pure world isko badhai dekha bc hat mulle madarchod', '@girishalva @garuna73 I never donate to any madarchod hindu priests, they are chors.', 'Bhak Machod Mullo Ke Abbu  @bewak_sanki543 @milkygaay @Dilli_Ka_Maalik @ArvindKrejriwal @ashu3page @AamAadmiParty\\\\xe2\\\\x80\\\\xa6 https://t.co/K1pRnRhz0V', '@_R_aHu_L_ @Mk56Kaur bhadwe ki aulad ho tum sale madarchod ki wajah se ye zait failta hai hindu muslim ka bhen ke t\\\\xe2\\\\x80\\\\xa6 https://t.co/nbdEzBGmu1', '@NaamHiKafiHay Teri maa Randi Madarchod Saale Pakistani']\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = df_hi.shape[0]\n",
+    "gp = df_hi.groupby(['class'])['text_id'].count()\n",
+    "hate = gp[1]\n",
+    "print(\"Size of dataset:\", total)\n",
+    "print(\"Hateful (class) = 1:\", hate, \"(\",hate/total*100,\"%)\")\n",
+    "print(\"\\n****\\n\")\n",
+    "print('**Hateful examples (class) = 1')\n",
+    "print(list(df_hi[df_hi['class']==1]['text'][0:10]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_hi['text'] = df_hi.apply(lambda x: emoji_clean(x.text), axis=1) \n",
+    "\n",
+    "df_hi['ekphrasis_clean_text'] = df_hi.apply(lambda x: \" \".join(text_processor.pre_process_doc(x.text)),axis=1)\n",
+    "df_hi['basic_clean_text'] = df_hi.apply(lambda x: pre.preprocess(x.text), axis = 1)\n",
+    "df_hi.to_csv('../data/dataset_hi_cdmx.csv',index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'user bahenchod . experienced lagte hold on bhai bhot face with tears joy'"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_hi['basic_clean_text'][100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@AvijitEmmi Bahenchod .... experienced lagte ho bhai bhot face with tears of joy\n",
+      "<user> bahenchod . <repeated> experienced lagte hold on bhai bhot face with tears of joy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_hi['text'][100])\n",
+    "print(df_hi['ekphrasis_clean_text'][100])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Building LR Baseline Model"
    ]
   },
   {
