adding hi support to features

--- a/src/base_line_model.ipynb
+++ b/src/base_line_model.ipynb
@@ -343,7 +343,7 @@
    "outputs": [],
    "source": [
     "def emoji_clean(x):\n",
-    "    from emoji import emoji\n",
+    "    from utils.emoji import emoji\n",
     "    import re\n",
     "    g = re.search(r'\\\\x[a-z0-9]([^<]*)', x, re.IGNORECASE)\n",
     "    if g:\n",
