--- a/src/base_line_model.ipynb
+++ b/src/base_line_model.ipynb
@@ -33,9 +33,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Reading Emoticons ...\n",
+      "Reading Slangs ...\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import re\n",
@@ -96,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -110,19 +119,19 @@
       "****\n",
       "\n",
       "**Hateful examples (class) = 1\n",
-      "[\"A gangster sets out to fulfill his father’s dream of becoming a doctor.    Doctor's in #WestBengal be like #munna_bhai_MBBS    #DoctorsFightBack #DoctorsStrike #DoctorsUnderOppression   @MamataOfficial https://t.co/lZQcStQ2Md\"]\n",
+      "[\"A gangster sets out to fulfill his father’s dream of becoming a doctor.    Doctor's in #WestBengal be like #munna_bhai_MBBS    #DoctorsFightBack #DoctorsStrike #DoctorsUnderOppression   @MamataOfficial https://t.co/lZQcStQ2Md\", 'That’s not white supremacy though is it. That means whites thinking AND ACTING as though they are superior to others. What these Jew/Muslim joint actions are concerned with is protecting stuff like Halal/Kosher, circumcision and the right to wear religious garb. 1/2', 'Sit his ass down!  Tape his fingers and duct-tape his mouth.  Then throw him in a cage with the immigrants.  Problem solved!  Such a vision.  America, Free of Trump.  Darn, I just woke up.  Dems will do nothing.  #FuckTrump #FuckGOP #FuckCivility #ImpeachmentInquiryNow https://t.co/gU8oBArfo8', 'Congress abusive language towards PM Modi in Parliament is unacceptable.. Punish the MP\\\\n#GandiNaaliAbuse', \"@realDonaldTrump Since @realDonaldTrump is the BIGGEST deadbeat fraud, what he calls a fraud is what the rest of humanity not kiSsing his rectum calls #TheTRUTH. And we ALL know Trump CAN'T HANDLE THE TRUTH! #FuckTrump #ComradeTrump #PutinsPuppet #CadetBoneSpurs #MakingAmericaGarbageAgain #MAGA\", \"#ShameOnICC  Even local cricket tournament have better management &amp; planning than your's .   Thankyou for spoiling the worldcup. https://t.co/tfYxvOreN7\", 'Congress should not forget that Modi is the Pm of India and he Definitely deserves respect. Congress should immediately apologize for this low standard comment.#Congress #GandiNaaliAbuse #GandiNaaliInsult #BJP', \"BECAUSE THE USA GOT INVOLVED IN EL SALVADOR NOT 'MUSLIM COUNTRIES'  \", '😂😂🤙🏽🤙🏽😰😰 Buy a #fucktrump #hat today. I took the price down &amp; #freeshipping CLICK on LINK in my bio. Or PRE-Order a #chingatrump hat ! 🤙🏽\\U0001f91f🏾👊🏽💪🏾 #peaceout #forthewin #imissobama #dumptrump #resist #impeach #etsy… https://t.co/UR1FktTpt9', '@BrianKarem @realDonaldTrump Be Quiet or the racist scarecrow with the orange face will get you!!  #fucktrump #FUCKTHEGOP #ImpeachTrumpNow https://t.co/RAyBWJczqR']\n",
       "\n",
       "**Offensive examples (class) = 2\n",
-      "['!!!!! RT @mleew17: boy dats cold...tyga dwn bad for cuffin dat hoe in the 1st place!!']\n"
+      "['!!!!! RT @mleew17: boy dats cold...tyga dwn bad for cuffin dat hoe in the 1st place!!', '!!!!!!! RT @UrKindOfBrand Dawg!!!! RT @80sbaby4life: You ever fuck a bitch and she start to cry? You be confused as shit', '!!!!!!!!! RT @C_G_Anderson: @viva_based she look like a tranny', '!!!!!!!!!!!!! RT @ShenikaRoberts: The shit you hear about me might be true or it might be faker than the bitch who told it to ya &#57361;', '!!!!!!!!!!!!!!!!!!\"@T_Madison_x: The shit just blows me..claim you so faithful and down for somebody but still fucking with hoes! &#128514;&#128514;&#128514;\"', '!!!!!!\"@__BrighterDays: I can not just sit up and HATE on another bitch .. I got too much shit going on!\"', \"!!!!&#8220;@selfiequeenbri: cause I'm tired of you big bitches coming for us skinny girls!!&#8221;\", '\" &amp; you might not get ya bitch back &amp; thats that \"', '\" @rhythmixx_ :hobbies include: fighting Mariam\"\\n\\nbitch', '\" Keeks is a bitch she curves everyone \" lol I walked into a conversation like this. Smh']\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x7f06af2f8fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x7f564afac940>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -149,10 +158,10 @@
     "print(\"Offensive (class) = 2:\",offensive, \"(\",offensive/total*100,\"%)\")\n",
     "print(\"\\n****\\n\")\n",
     "print('**Hateful examples (class) = 1')\n",
-    "print(list(df_en[df_en['class']==1]['text'][0:1]))\n",
+    "print(list(df_en[df_en['class']==1]['text'][0:10]))\n",
     "\n",
     "print('\\n**Offensive examples (class) = 2')\n",
-    "print(list(df_en[df_en['class']==2]['text'][0:1]))\n",
+    "print(list(df_en[df_en['class']==2]['text'][0:10]))\n",
     "gp.plot(kind='bar')\n"
    ]
   },
@@ -165,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
