--- a/data/hi/Hinglish-Offensive-Text-Classification/format_data.ipynb
+++ b/data/hi/Hinglish-Offensive-Text-Classification/format_data.ipynb
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "Size of dataset: 3189\n",
-      "Percentage abusive: 0.5534650360614612\n",
+      "Percentage abusive: 0.09501411100658513\n",
+      "Percentage Offensive: 0.5534650360614612\n",
       "Writing to file, hi-code-mixed-pmathur.csv\n"
      ]
     }
@@ -22,10 +23,12 @@
     "df['text_id'] = df.apply(lambda x: 'pmathur_'+str(x.text_id), axis=1)\n",
     "df.reindex(columns=['text_id','text','hate'])\n",
     "total = df.shape[0]\n",
+    "abusive = df.groupby(['hate'])['text_id'].count()[1]\n",
     "hate = df.groupby(['hate'])['text_id'].count()[2]\n",
     "# normal = df.groupby(['hate'])['text_id'].count()[0]\n",
     "print(\"Size of dataset:\", total)\n",
-    "print(\"Percentage abusive:\", hate/total)\n",
+    "print(\"Percentage abusive:\", abusive/total)\n",
+    "print(\"Percentage Offensive:\", hate/total)\n",
     "print('Writing to file, hi-code-mixed-pmathur.csv')\n",
     "df.to_csv('hi-code-mixed-pmathur.csv',index=False)"
    ]
