--- a/data/en/hasoc2019/format_data.ipynb
+++ b/data/en/hasoc2019/format_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,7 @@
      "output_type": "stream",
      "text": [
       "Size of dataset: 7005\n",
-      "Percentage abusive: 0.36388294075660244\n",
+      "Percentage offensive: 0.36388294075660244\n",
       "Writing to file, hasoc2019.csv\n"
      ]
     }
@@ -28,7 +28,7 @@
     "hate = df.groupby(['hate'])['text_id'].count()[1]\n",
     "# normal = df.groupby(['hate'])['text_id'].count()[0]\n",
     "print(\"Size of dataset:\", total)\n",
-    "print(\"Percentage abusive:\", hate/total)\n",
+    "print(\"Percentage offensive:\", hate/total)\n",
     "print('Writing to file, hasoc2019.csv')\n",
     "df.to_csv('hasoc2019.csv',index=False)"
    ]
