--- a/src/base_line_CNN_LSTM.ipynb
+++ b/src/base_line_CNN_LSTM.ipynb
@@ -126,7 +126,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 100/50369 [00:00<00:50, 997.02it/s]"
+      "  0%|          | 100/50369 [00:00<00:50, 986.90it/s]"
      ]
     },
     {
@@ -140,7 +140,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 50369/50369 [00:34<00:00, 1449.00it/s]\n"
+      "100%|██████████| 50369/50369 [00:34<00:00, 1452.89it/s]\n"
      ]
     },
     {
@@ -168,7 +168,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "138 23051 [2 1 0]\n"
+      "138 23131 [2 1 0]\n"
      ]
     }
    ],
@@ -203,7 +203,7 @@
       "==================================================================================================\n",
       "input_1 (InputLayer)            (None, 138)          0                                            \n",
       "__________________________________________________________________________________________________\n",
-      "embedding (Embedding)           (None, 138, 100)     2305100     input_1[0][0]                    \n",
+      "embedding (Embedding)           (None, 138, 100)     2313100     input_1[0][0]                    \n",
       "__________________________________________________________________________________________________\n",
       "reshape (Reshape)               (None, 138, 100, 1)  0           embedding[0][0]                  \n",
       "__________________________________________________________________________________________________\n",
@@ -254,8 +254,8 @@
       "__________________________________________________________________________________________________\n",
       "activation (Activation)         (None, 3)            0           dense_3[0][0]                    \n",
       "==================================================================================================\n",
-      "Total params: 2,581,071\n",
-      "Trainable params: 2,580,687\n",
+      "Total params: 2,589,071\n",
+      "Trainable params: 2,588,687\n",
       "Non-trainable params: 384\n",
       "__________________________________________________________________________________________________\n",
       "None\n"
@@ -272,11 +272,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "plot_model(model, to_file='model.png')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 32236 samples, validate on 8059 samples\n",
+      "WARNING:tensorflow:From /homes/nv304/project/py3tf2/lib/python3.6/site-packages/tensorflow/python/ops/math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n",
+      "Epoch 1/50\n",
+      "32190/32236 [============================>.] - ETA: 0s - loss: 1.0581 - acc: 0.4174\n",
+      "Epoch 00001: val_acc improved from -inf to 0.52389, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 22s 688us/sample - loss: 1.0582 - acc: 0.4175 - val_loss: 0.9985 - val_acc: 0.5239\n",
+      "Epoch 2/50\n",
+      "32130/32236 [============================>.] - ETA: 0s - loss: 0.9807 - acc: 0.5288\n",
+      "Epoch 00002: val_acc improved from 0.52389 to 0.56620, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 534us/sample - loss: 0.9806 - acc: 0.5290 - val_loss: 0.9304 - val_acc: 0.5662\n",
+      "Epoch 3/50\n",
+      "32160/32236 [============================>.] - ETA: 0s - loss: 0.9172 - acc: 0.5829\n",
+      "Epoch 00003: val_acc improved from 0.56620 to 0.62018, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 539us/sample - loss: 0.9172 - acc: 0.5830 - val_loss: 0.8831 - val_acc: 0.6202\n",
+      "Epoch 4/50\n",
+      "32160/32236 [============================>.] - ETA: 0s - loss: 0.8711 - acc: 0.6268\n",
+      "Epoch 00004: val_acc improved from 0.62018 to 0.64214, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 536us/sample - loss: 0.8708 - acc: 0.6269 - val_loss: 0.8515 - val_acc: 0.6421\n",
+      "Epoch 5/50\n",
+      "32130/32236 [============================>.] - ETA: 0s - loss: 0.8395 - acc: 0.6482\n",
+      "Epoch 00005: val_acc improved from 0.64214 to 0.65194, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 532us/sample - loss: 0.8392 - acc: 0.6483 - val_loss: 0.8259 - val_acc: 0.6519\n",
+      "Epoch 6/50\n",
+      "32220/32236 [============================>.] - ETA: 0s - loss: 0.8095 - acc: 0.6689\n",
+      "Epoch 00006: val_acc improved from 0.65194 to 0.66993, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 537us/sample - loss: 0.8096 - acc: 0.6689 - val_loss: 0.8070 - val_acc: 0.6699\n",
+      "Epoch 7/50\n",
+      "32190/32236 [============================>.] - ETA: 0s - loss: 0.7861 - acc: 0.6825\n",
+      "Epoch 00007: val_acc improved from 0.66993 to 0.67564, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 533us/sample - loss: 0.7862 - acc: 0.6825 - val_loss: 0.7906 - val_acc: 0.6756\n",
+      "Epoch 8/50\n",
+      "32220/32236 [============================>.] - ETA: 0s - loss: 0.7611 - acc: 0.6962\n",
+      "Epoch 00008: val_acc improved from 0.67564 to 0.69090, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 530us/sample - loss: 0.7612 - acc: 0.6962 - val_loss: 0.7783 - val_acc: 0.6909\n",
+      "Epoch 9/50\n",
+      "32130/32236 [============================>.] - ETA: 0s - loss: 0.7406 - acc: 0.7075\n",
+      "Epoch 00009: val_acc did not improve from 0.69090\n",
+      "32236/32236 [==============================] - 17s 523us/sample - loss: 0.7407 - acc: 0.7073 - val_loss: 0.7660 - val_acc: 0.6814\n",
+      "Epoch 10/50\n",
+      "32220/32236 [============================>.] - ETA: 0s - loss: 0.7206 - acc: 0.7164\n",
+      "Epoch 00010: val_acc improved from 0.69090 to 0.70046, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 535us/sample - loss: 0.7205 - acc: 0.7164 - val_loss: 0.7632 - val_acc: 0.7005\n",
+      "Epoch 11/50\n",
+      "32160/32236 [============================>.] - ETA: 0s - loss: 0.7034 - acc: 0.7253\n",
+      "Epoch 00011: val_acc improved from 0.70046 to 0.70728, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 536us/sample - loss: 0.7033 - acc: 0.7254 - val_loss: 0.7538 - val_acc: 0.7073\n",
+      "Epoch 12/50\n",
+      "32220/32236 [============================>.] - ETA: 0s - loss: 0.6861 - acc: 0.7326\n",
+      "Epoch 00012: val_acc did not improve from 0.70728\n",
+      "32236/32236 [==============================] - 17s 533us/sample - loss: 0.6863 - acc: 0.7326 - val_loss: 0.7428 - val_acc: 0.7057\n",
+      "Epoch 13/50\n",
+      "32190/32236 [============================>.] - ETA: 0s - loss: 0.6714 - acc: 0.7402\n",
+      "Epoch 00013: val_acc did not improve from 0.70728\n",
+      "32236/32236 [==============================] - 17s 531us/sample - loss: 0.6713 - acc: 0.7402 - val_loss: 0.7383 - val_acc: 0.7001\n",
+      "Epoch 14/50\n",
+      "32190/32236 [============================>.] - ETA: 0s - loss: 0.6534 - acc: 0.7488\n",
+      "Epoch 00014: val_acc did not improve from 0.70728\n",
+      "32236/32236 [==============================] - 17s 526us/sample - loss: 0.6534 - acc: 0.7489 - val_loss: 0.7347 - val_acc: 0.7054\n",
+      "Epoch 15/50\n",
+      "32220/32236 [============================>.] - ETA: 0s - loss: 0.6363 - acc: 0.7552\n",
+      "Epoch 00015: val_acc improved from 0.70728 to 0.71101, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 534us/sample - loss: 0.6362 - acc: 0.7552 - val_loss: 0.7294 - val_acc: 0.7110\n",
+      "Epoch 16/50\n",
+      "32190/32236 [============================>.] - ETA: 0s - loss: 0.6210 - acc: 0.7637\n",
+      "Epoch 00016: val_acc did not improve from 0.71101\n",
+      "32236/32236 [==============================] - 17s 522us/sample - loss: 0.6210 - acc: 0.7637 - val_loss: 0.7273 - val_acc: 0.7023\n",
+      "Epoch 17/50\n",
+      "32160/32236 [============================>.] - ETA: 0s - loss: 0.6037 - acc: 0.7713\n",
+      "Epoch 00017: val_acc did not improve from 0.71101\n",
+      "32236/32236 [==============================] - 17s 521us/sample - loss: 0.6038 - acc: 0.7713 - val_loss: 0.7301 - val_acc: 0.7070\n",
+      "Epoch 18/50\n",
+      "32190/32236 [============================>.] - ETA: 0s - loss: 0.5871 - acc: 0.7796\n",
+      "Epoch 00018: val_acc improved from 0.71101 to 0.72143, saving model to ../model/02-Sep-2020_02_14_47_en_weights.best.hdf5\n",
+      "32236/32236 [==============================] - 17s 535us/sample - loss: 0.5871 - acc: 0.7795 - val_loss: 0.7395 - val_acc: 0.7214\n",
+      "Epoch 19/50\n",
+      "32130/32236 [============================>.] - ETA: 0s - loss: 0.5706 - acc: 0.7852\n",
+      "Epoch 00019: val_acc did not improve from 0.72143\n",
+      "32236/32236 [==============================] - 17s 526us/sample - loss: 0.5706 - acc: 0.7853 - val_loss: 0.7314 - val_acc: 0.7191\n",
+      "Epoch 20/50\n",
+      "32190/32236 [============================>.] - ETA: 0s - loss: 0.5518 - acc: 0.7936\n",
+      "Epoch 00020: val_acc did not improve from 0.72143\n",
+      "32236/32236 [==============================] - 17s 515us/sample - loss: 0.5518 - acc: 0.7936 - val_loss: 0.7333 - val_acc: 0.7157\n",
+      "Epoch 21/50\n",
+      "32220/32236 [============================>.] - ETA: 0s - loss: 0.5367 - acc: 0.8000\n",
+      "Epoch 00021: val_acc did not improve from 0.72143\n",
+      "Restoring model weights from the end of the best epoch.\n",
+      "32236/32236 [==============================] - 17s 532us/sample - loss: 0.5368 - acc: 0.7999 - val_loss: 0.7389 - val_acc: 0.7206\n",
+      "Epoch 00021: early stopping\n",
+      "Time Taken: 00:06:09\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = get_timestamp()\n",
+    "start_time = time.time()\n",
+    "model_path = '../model/'+tmp+'_en_weights.best.hdf5'\n",
+    "hist = net.train(data.X_train, data.y_train, model, model_path, data.class_weight)\n",
+    "seconds = time.time() - start_time\n",
+    "print('Time Taken:', time.strftime(\"%H:%M:%S\",time.gmtime(seconds)))"
    ]
   },
   {
